--- a/resources/css/typo/webfonts.css
+++ b/resources/css/typo/webfonts.css
@@ -26,3 +26,11 @@
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: 'TheSansExtraBold';
+  src: url('fonts/TheSans-B8ExtraBold.woff2') format('woff2'), url('fonts/TheSans-B8ExtraBold.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
